[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Stephanie Westrum <swestrum@researchinnovations.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.8"
anytree = "^2.8.0"
numpy = "^1.23.5"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
rich = "^12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
